# Cyrene

./: .env.env.bak  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT_DEV_PROGRESS.md  LICENSE  README.md  SOUL.default.md  WEBUI_TODO.md  docker-compose.yml  pyproject.toml  pytest.ini  registry_tools.py
$TMPDIR/: check_prompt.py
.claude/rules/: architecture.md  debug.md
.github/workflows/: ci.yml  release.yml
_temp/: cli-design.md  cli_test_result.txt  cli_test_zh.txt  event_audit_report.txt  event_ids.txt  poet_painter_conversation.txt
docs/: architecture.md  browser-live-view.md  configuration.md  development.md  installation.md  usage.md
electron/: main.js  package-lock.json  package.json  preload.js
src/cyrene/: __main__.py  _buildinfo.py  agent.py  attachments.py  backup.py  behavior_learning.py  bot.py  browser.py  call_llm.py  cc_bridge.py  cc_learner.py  cc_terminal.py  cli.py  config.py  config_store.py  context_debug.py  context_identity.py  context_trace.py  conversations.py  db.py  debug.py  entities.py  inbox.py  io_utils.py  llm.py  local_cli.py  map_pin_tool.py  mcp_manager.py  memory.py  notifications.py  onboarding.py  pattern.py  registry_tools.py  report_export.py  report_template.md  schedule_spec.py  scheduler.py  search.py  searxng_manager.py  secret_redaction.py  (+13 more)
src/cyrene/agent/: __init__.py  agent.py  auto_review.py  commands.py  coordinator.py  deep_reflection.py  deep_reflection_prompts.py  guidance.py  message.py  planning.py  prompts.py  round.py  session.py  state.py
src/cyrene/code_tools/: __init__.py  analysis.py  git_tools.py  indexer.py
src/cyrene/knowledge/: __init__.py  embeddings.py  ingest.py  retrieve.py  store.py
src/cyrene/modules/: deep_research.py
src/nanoclaw/: __main__.py  agent.py  bot.py  config.py  conversations.py  local_cli.py  memory.py  scheduler.py
src/webui/: __init__.py  __main__.py  auth.py  build-jsx.mjs  package-lock.json  package.json  routes.py  routes_amap.py  routes_entities.py  routes_knowledge.py  routes_map.py  routes_workbench_chat.py  routes_workbench_knowledge.py  routes_workbench_memory.py  routes_workbench_schedule.py  server.py  workbench_notifications.py
src/workbench-webui/: settings-overlay.jsx  workbench-chat.jsx  workbench-create.jsx  workbench-i18n.jsx  workbench-knowledge.jsx  workbench-memory.jsx  workbench-model.jsx  workbench-schedule.jsx  workbench.css  workbench.jsx
tests/: conftest.py  test_agent_pure.py  test_agent_session_persistence.py  test_auth_middleware.py  test_behavior_learning.py  test_browser_session.py  test_cache_fixes.py  test_call_llm_candidates.py  test_cc_bridge.py  test_cc_routes.py  test_context_trace.py  test_deep_reflection.py  test_dev_dependencies.py  test_issue_fixes.py  test_knowledge.py  test_knowledge_routes.py  test_mcp_manager.py  test_onboarding_webui.py  test_runtime_fixes.py  test_subagent_fixes.py  test_workbench_frontend_logic.py  test_workbench_init_plan.py
(+108 files in other folders)
